compiler/testData/diagnostics/tests/redeclarations/ClassRedeclarationInDifferentFiles.fir.kt
// FILE: f1.kt
package test

class <!CLASSIFIER_REDECLARATION!>A<!>
class F1

// FILE: f2.kt
package test

class <!CLASSIFIER_REDECLARATION!>A<!>
class F2